fix: (CXSPA-9035) StoreFinder Truncation on applying text spacing settings.
* closes: https://jira.tools.sap/browse/CXSPA-9035

--- a/feature-libs/storefinder/styles/components/_store-finder-list-item.scss
+++ b/feature-libs/storefinder/styles/components/_store-finder-list-item.scss
@@ -36,6 +36,9 @@
     @include media-breakpoint-down(md) {
       white-space: normal;
     }
+    @include forFeature('a11yTruncatedTextStoreFinder') {
+      white-space: normal;
+    }
   }
   .cx-store-open {
     font-size: var(--cx-font-size, 0.875rem);
